--- a/styles/style.css
+++ b/styles/style.css
@@ -292,6 +292,8 @@ button {
     #form {
         flex-direction: column;
         align-items: center;
+
+        width: 100%;
     }
     .button {
         margin-top: 2rem;
